# workspace

./: .gitignore  README.md  source-me.sh
src/kabot_bringup/: CMakeLists.txt  package.xml
src/kabot_bringup/config/: yolo_record_ros_gz.yaml
src/kabot_bringup/launch/: diff_drive.launch.py  kabot.launch.py  rrbot_setup.launch.py  simple.launch.py  yolo_record.launch.py
src/kabot_description/: CMakeLists.txt  package.xml
src/kabot_description/models/diff_drive/: kabot.urdf.sdf  kabot.urdf.urdf  model.sdf
src/kabot_description/models/kabot/: model.config
src/kabot_description/models/simple/: model.config  model.sdf
src/kabot_description/urdf/: chassis.xacro  gazebo_control.xacro  inertial_macros.xacro  kabot.xacro  yolo_vertical_camera.xacro
src/kabot_launcher/: package.xml  setup.cfg  setup.py
src/kabot_launcher/launch/: gazebo.launch.py
src/kabot_msgs/: CMakeLists.txt  package.xml
src/kabot_msgs/msg/: ImageAnnotated.msg  KabotMarker.msg  TrackingTrainingData.msg
src/kabot_msgs/srv/: GenerateKabotImage.srv  YoloAnnotation.srv
src/kabot_yolo/: package.xml  setup.cfg  setup.py
src/kabot_yolo/kabot_yolo/: generate_yolo_record.py
src/ros_gz_example_gazebo/: CMakeLists.txt  package.xml
src/ros_gz_example_gazebo/src/: BasicSystem.cc  FullSystem.cc
src/ros_gz_example_gazebo/worlds/: diff_drive.sdf  kabot_training_yard.sdf  simple.sdf
