<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kabot_bringup</name>
  <version>0.1.0</version>
  <license>Apache 2.0</license>
  <description>TODO: Package description</description>
  <maintainer email="jakubkolasa99@gmail.com">jk</maintainer>

  <depend>joint_state_publisher_gui</depend>

  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>kabot_description</depend>
  <depend>ros_gz_example_gazebo</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
