<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kabot_description</name>
  <version>0.0.0</version>
  <license>Apache 2.0</license>
  <description>TODO: Package description</description>
  <maintainer email="jakubkolasa99@gmail.com">jk</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>ros2-xacro</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2-xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
